Refs #9223; Fixed the following:  - Fixed the addition of selected classes when using the coverflow slider with the mouse or the keyboard  - Fixed a situation when the vidoe would play as soon as you clicked on the coverflow image

--- a/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
+++ b/src/eea/mediacentre/skins/eea_multimedia/coverflow/css/demos.css
@@ -58,17 +58,6 @@ div.wrapper {
 	border: none !important;
     cursor: move;
     width: 300px;
-    /* padding: 30px 0px; */
-
-}
-
-.ui-selected {
-	color: white;
-	background: #EDA32D; /* old browsers */
-	background: -moz-linear-gradient(top, #EDA32D 0%, #F9731E 99%); /* firefox */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#EDA32D), color-stop(99%,#F9731E)); /* webkit */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EDA32D', endColorstr='#F9731E',GradientType=0 ); /* ie */
-	border:none;
 }
 
 .pageWrapper {
